WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236360
REGRESSION(
r286560
): MediaElement's getStartDate returning an incorrect time
https://bugs.webkit.org/show_bug.cgi?id=236360
Summary
REGRESSION(r286560): MediaElement's getStartDate returning an incorrect time
Robert Bryer
Reported
2022-02-09 05:46:35 PST
In the latest Safari Technology Preview 139 - 15.4, the VideoElement's getStartDate function is returning a time 1000x times too big (using microseconds when it used to be milliseconds?) e.g. 1644405911040000 (Thu Feb 23 54079 19:44:00 GMT+0000 (GMT)).
Attachments
[fast-cq] Patch
(2.87 KB, patch)
2022-02-14 13:46 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-02-10 16:56:32 PST
<
rdar://problem/88786989
>
Devin Rousso
Comment 2
2022-02-14 13:46:51 PST
Created
attachment 451939
[details]
[fast-cq] Patch
EWS
Comment 3
2022-02-14 13:52:41 PST
Committed
r289762
(
247234@main
): <
https://commits.webkit.org/247234@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451939
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug