REGRESSION(r286560): MediaElement's getStartDate returning an incorrect time https://bugs.webkit.org/show_bug.cgi?id=236360 <rdar://problem/88786989>

Reviewed by Eric Carlson.

r286560 changed IDL `Date` to use `WallTime` instead of a raw `double`, meaning that
`HTMLMediaElement::getStartDate` now did extra processing of the `MediaTime` returned by
`MediaPlayer::getStartDate`.

Unfortunately, `MediaPlayerPrivateAVFoundationObjC::getStartDate` returned a `MediaTime`
represented in milliseconds (due to two `* 1000`), even though `MediaTime` is supposed to be
seconds-based.

As a result, the changes in r286560 inadvertently caused two `* 1000` on the same time value.

Covered by existing test (`LayoutTests/http/tests/media/hls/video-controller-getStartDate.html`).
Note that the test was marked as `[Pass Failure]` before r286560.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::getStartDate const):



Canonical link: https://commits.webkit.org/247234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289762 268f45cc-cd09-0410-ab3c-d52691b4dbfc